force-app/main/default/objects/License__c/fields/Background_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Date__c</fullName>
    <label>Background Check Date</label>
    <type>Date</type>
</CustomField>