force-app/main/default/objects/License__c/fields/Family_Account__c.field-meta.xml
<CustomField>
    <fullName>Family_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Account</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>