force-app/main/default/objects/License__c/fields/Home_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Inspection_Date__c</fullName>
    <label>Home Inspection Date</label>
    <type>Date</type>
</CustomField>