force-app/main/default/objects/License__c/fields/License_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Holder_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Holder Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>