force-app/main/default/objects/License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (Permanent)</fullName>
            </value>
            <value>
                <fullName>Kinship</fullName>
            </value>
            <value>
                <fullName>Therapeutic</fullName>
            </value>
            <value>
                <fullName>Emergency (Temporary)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>