force-app/main/default/objects/License__c/fields/Reason_for_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Denial__c</fullName>
    <label>Reason for Denial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>