force-app/main/default/objects/License__c/fields/Renewal_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder_Date__c</fullName>
    <formula>Expiry_Date__c - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Reminder Date</label>
    <type>Date</type>
</CustomField>