force-app/main/default/objects/License__c/fields/Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours__c</fullName>
    <label>Training Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>