force-app/main/default/objects/License__c/fields/Training_Hours_Pending__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours_Pending__c</fullName>
    <formula>Training_Hours__c -  Training_Hours_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Hours Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>